--- a/fedora.yml
+++ b/fedora.yml
@@ -5,7 +5,7 @@
     hostname: ito
     email: matt@matthewkirk.com
     ruby_versions:
-      - 2.2.5
+      - 2.4.1
     ssh_keygen_bits: 4096
     ssh_keygen_types:
       - ed25519
@@ -14,18 +14,14 @@
       prompt: "What password do you want to use for ssh?"
   roles:
     - ssh
-    - docker
     - ruby
     - mysql
-    - elasticsearch
-    - scanning
-    - percona
-    - pyenv
-    - direnv
-    - maintenance
-    - phantomjs
-    - postgres
-    - orc
+    # - elasticsearch
+    # - percona
+    # - pyenv
+    # - maintenance
+    # - phantomjs
+    # - postgres
   become_method: sudo
   become: true
   tasks:  
@@ -40,13 +36,13 @@
     - name: Install RPMFusion free
       tags: [personal]
       dnf:
-        name: https://download1.rpmfusion.org/free/fedora/rpmfusion-free-release-25.noarch.rpm
+        name: https://download1.rpmfusion.org/free/fedora/rpmfusion-free-release-26.noarch.rpm
         state: present
 
     - name: Install RPMFusion non free
       tags: [personal]
       dnf:
-        name: https://download1.rpmfusion.org/nonfree/fedora/rpmfusion-nonfree-release-25.noarch.rpm
+        name: https://download1.rpmfusion.org/nonfree/fedora/rpmfusion-nonfree-release-26.noarch.rpm
         state: present
 
     - name: Spotify fedora repo
@@ -59,46 +55,54 @@
         gpgkey: http://negativo17.org/repos/RPM-GPG-KEY-slaanesh
 
     - name: Install libraries with dnf
-      dnf: name={{ item }} state=installed
+      dnf: name={{ item }} state=latest
       tags: [system]
       with_items:
-        - vim
         - ack
-        - redshift
-        - git
-        - chromium
-        - conky
-        - i3
-        - i3status
-        - dmenu
-        - i3lock
-        - feh
-        - xbacklight
-        - redshift-gtk
-        - redis
-        - transmission
-        - pv
-        - shutter
+        - bzip2
         - bzip2-devel
-        - sqlite-devel
-        - libsqlite3x-devel
-        - tmate
-        - tmux
         - bzip2-libs
-        - htop
-        - colordiff
-        - hddtemp
-        - lm_sensors
-        - xss-lock
-        - mongodb
-        - mongodb-server
-        - gnome-shell-extension-pomodoro
+        - chromium
         - cmake
+        - colordiff
+        - conky
+        - direnv
+        - dmenu
+        - exfat-utils
+        - feh
+        - fuse-exfat
+        - git
+        - gnome-shell-extension-pomodoro
+        - hddtemp
+        - htop
+        - i3
+        - i3lock
+        - i3status
+        - libsqlite3x-devel
         - libxml2-devel
         - libxslt-devel
+        - lm_sensors
         - memcached
-        - fuse-exfat
-        - exfat-utils
+        - mongodb
+        - mongodb-server
+        - openssl-devel
+        - pv
+        - readline-devel
+        - redis
+        - redshift
+        - redshift-gtk
+        - shutter
+        - sqlite
+        - sqlite-devel
+        - tmate
+        - tmux
+        - transmission
+        - vim-enhanced
+        - xbacklight
+        - xss-lock
+        - xz
+        - xz-devel
+        - zlib-devel
     - name: Redis server start
       service:
         name: redis
@@ -123,5 +127,3 @@
       become_user: hexgnu
       args:
         chdir: /home/hexgnu/git/dotfiles
-
-
