--- a/pyenv/tasks/main.yml
+++ b/pyenv/tasks/main.yml
@@ -15,6 +15,4 @@
   become_user: "{{username}}"
   command: ~/.pyenv/bin/pyenv install -s {{item}}
   with_items:
-    - 2.7.12
-    - 3.5.2
-
+    - anaconda3-5.1.0
