--- a/postgres/tasks/main.yml
+++ b/postgres/tasks/main.yml
@@ -1,17 +1,47 @@
 ---
+- name: Ensure bash, OpenSSl, and libssl are the latest versions
+  dnf:
+    name: ['bash', 'openssl', 'openssl-devel']
+    state: latest
+  tags: packages
+
 - name: Install postgres dependencies
   tags: postgres
-  dnf: pkg={{item}} state=installed
+  dnf:
+    name: ['postgresql-server', 'postgresql-contrib', 'postgresql', 'libpq-devel', 'postgresql-devel', 'python3-psycopg2']
+    state: latest
+
+- name: Ensure the PostgreSQL service is running
+  service: name=postgresql state=started enabled=yes
+
+- name: Init the db if not already done
+  become_user: postgres
+  command: /usr/bin/postgresql-setup --initdb
+  args:
+          creates: /var/lib/pgsql/data
+
+- name: Ensure database is created
+  become_user: postgres
+  postgresql_db: name={{ item }}
+             encoding='UTF-8'
+             lc_collate='en_US.UTF-8'
+             lc_ctype='en_US.UTF-8'
+             template='template0'
+             state=present
   with_items:
-    - postgresql-server
-    - postgresql-contrib
-    - postgresql
-    - postgresql-devel
+      - garver
+- name: Ensure user has access to the database
+  become_user: postgres
+  postgresql_user: db={{ item }}
+               name={{ username }}
+               priv=ALL
+               password={{ pg_password }}
+               state=present
+  with_items:
+      - garver
 
-- name: Start postgres
-  service:
-    name: postgresql
-    state: started
-
-
-
+- name: Ensure user does not have unnecessary privileges
+  become_user: postgres
+  postgresql_user: name={{ username }}
+               role_attr_flags=NOSUPERUSER,NOCREATEDB
+               state=present
