adding pam_yubico

--- a/fedora.yml
+++ b/fedora.yml
@@ -101,6 +101,7 @@
         - fontawesome-fonts
         - community-mysql
         - vlc
+        - pam_yubico
 
     - name: Install personal libraries
       dnf: name={{ item }} state=installed
