--- a/vim/tasks/main.yml
+++ b/vim/tasks/main.yml
@@ -2,7 +2,6 @@
 - name: install ctrl-p
   become: true
   become_user: hexgnu
-  git:
-          update: false
-          repo: https://github.com/ctrlpvim/ctrlp.vim.git
-          dest: /home/hexgnu/.config/nvim/bundle/ctrlp.vim
+  shell: |
+      curl -fLo "${XDG_DATA_HOME:-$HOME/.local/share}"/nvim/site/autoload/plug.vim --create-dirs \
+      https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
