--- a/flatpak/tasks/main.yml
+++ b/flatpak/tasks/main.yml
@@ -5,8 +5,8 @@
 - name: enable flatpak
   command: flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
 
-- name: install spotify
-  command: flatpak install -y flathub com.spotify.Client
+# - name: install spotify
+#   command: flatpak install -y flathub com.spotify.Client
 
 - name: install slack
   command: flatpak install -y flathub com.slack.Slack
