--- a/jupiter.yml
+++ b/jupiter.yml
@@ -16,6 +16,7 @@
     - flatpak
     - st
     - vim
+    - authoring
   become_method: sudo
   become: true
   tasks:  
@@ -82,6 +83,9 @@
             - i3
             - i3lock
             - i3status
+            - libpq-devel
+            - community-mysql-devel
+            - community-mysql
 
     - name: Check out dotfiles
       become: true
