--- a/vim/tasks/main.yml
+++ b/vim/tasks/main.yml
@@ -2,6 +2,7 @@
 - name: install ctrl-p
   become: true
   become_user: hexgnu
-  shell: |
-      curl -fLo "${XDG_DATA_HOME:-$HOME/.local/share}"/nvim/site/autoload/plug.vim --create-dirs \
-      https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
+  git:
+    update: true
+    repo: https://github.com/ctrlpvim/ctrlp.vim.git
+    dest: /home/hexgnu/.config/nvim/bundle/ctrlp.vim
