--- a/jupiter.yml
+++ b/jupiter.yml
@@ -10,6 +10,7 @@
     ssh_keygen_bits: 4096
     ssh_keygen_types:
       - ed25519
+    fedora_version: 42
   roles:
     - miniconda
     # - i3blocks
@@ -20,7 +21,7 @@
     # - authoring
     - slack
     - nvidia
-    - docker
+    # - docker
     # - postgres
   become_method: sudo
   become: true
@@ -36,7 +37,7 @@
     - name: Install RPMFusion free
       tags: [personal]
       dnf:
-        name: https://mirrors.rpmfusion.org/free/fedora/rpmfusion-free-release-39.noarch.rpm
+        name: "https://mirrors.rpmfusion.org/free/fedora/rpmfusion-free-release-{{ fedora_version }}.noarch.rpm"
         disable_gpg_check: yes
         state: present
 
@@ -44,7 +45,7 @@
       tags: [personal]
       dnf:
         disable_gpg_check: yes
-        name: https://mirrors.rpmfusion.org/nonfree/fedora/rpmfusion-nonfree-release-39.noarch.rpm
+        name: "https://mirrors.rpmfusion.org/nonfree/fedora/rpmfusion-nonfree-release-{{ fedora_version }}.noarch.rpm"
         state: present
 
     - command: dnf config-manager --add-repo https://brave-browser-rpm-release.s3.brave.com/x86_64/
