WIP for setting up desktop

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,43 @@
 [defaults]
+# Performance
 callback_whitelist = profile_tasks
-ansible_python_interpreter=/usr/bin/python3
+pipelining = True
+gathering = smart
+fact_caching = jsonfile
+fact_caching_connection = /tmp/ansible_cache
+fact_caching_timeout = 3600
+
+# Python
+ansible_python_interpreter = /usr/bin/python3
+
+# Output
+stdout_callback = yaml
+display_skipped_hosts = False
+display_ok_hosts = True
+
+# Error handling
+any_errors_fatal = False
+host_key_checking = False
+
+# Retries
+retry_files_enabled = True
+retry_files_save_path = /tmp/ansible-retry
+
+# Roles
+roles_path = ./
 
 [ssh_connection]
 pipelining = True
 control_path = /tmp/ansible-ssh-%%h-%%p-%%r
+
+[colors]
+highlight = bright blue
+verbose = blue
+warn = yellow
+error = red
+debug = dark gray
+deprecate = purple
+skip = cyan
+unreachable = bright red
+ok = green
+changed = yellow
